@@ -12,7 +12,7 @@ import com.itemis.jscdlib.internal.ScardLibNativeBridge;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.lang.foreign.SegmentScope;
+import java.lang.foreign.Arena;
 import java.lang.foreign.SymbolLookup;
 import java.util.Set;
 
@@ -27,7 +27,7 @@ public final class JScdLib {
     private static final boolean IS_MAC;
 
     static {
-        var osDetector = new OsDetector();
+        final var osDetector = new OsDetector();
         if (osDetector.isWindows()) {
             LOG.debug("Identified OS type Windows");
             IS_WINDOWS = true;
@@ -68,14 +68,14 @@ public final class JScdLib {
         ScardLibNativeBridge bridge = null;
 
         if (IS_WINDOWS) {
-            bridge = new ScardLibNativeBridge(scope -> libraryLookup("winscard", scope));
+            bridge = new ScardLibNativeBridge(arena -> libraryLookup("winscard", arena));
         } else if (IS_MAC) {
             // See
             // https://github.com/gpg/gnupg/blob/25ae80b8eb6e9011049d76440ad7d250c1d02f7c/scd/scdaemon.c#L208
             bridge = new ScardLibNativeBridge(
-                session -> libraryLookup("/System/Library/Frameworks/PCSC.framework/PCSC", session));
+                arena -> libraryLookup("/System/Library/Frameworks/PCSC.framework/PCSC", arena));
         } else {
-            bridge = new ScardLibNativeBridge(scope -> loadLinuxLib(LINUX_SCARD_LIB_CANDIDATES, scope));
+            bridge = new ScardLibNativeBridge(arena -> loadLinuxLib(LINUX_SCARD_LIB_CANDIDATES, arena));
         }
 
         return new SCardLibHandle(bridge);
@@ -97,26 +97,26 @@ public final class JScdLib {
         ScDaemonNativeBridge bridge = null;
 
         if (IS_WINDOWS) {
-            bridge = new ScDaemonNativeBridge(scope -> libraryLookup("libassuan6-0", scope));
+            bridge = new ScDaemonNativeBridge(arena -> libraryLookup("libassuan6-0", arena));
         } else if (IS_MAC) {
-            bridge = new ScDaemonNativeBridge(scope -> libraryLookup("libassuan", scope));
+            bridge = new ScDaemonNativeBridge(arena -> libraryLookup("libassuan", arena));
         } else {
-            bridge = new ScDaemonNativeBridge(scope -> loadLinuxLib(LINUX_SCDAEMON_LIB_CANDIDATES, scope));
+            bridge = new ScDaemonNativeBridge(arena -> loadLinuxLib(LINUX_SCDAEMON_LIB_CANDIDATES, arena));
         }
 
         return new ScDaemonHandle(bridge, new JScdGpgConfSocketDiscovery(new JScdEnvSocketDiscovery()));
     }
 
-    private static SymbolLookup loadLinuxLib(Iterable<String> libNameCandidates, SegmentScope scope) {
+    private static SymbolLookup loadLinuxLib(final Iterable<String> libNameCandidates, final Arena arena) {
         SymbolLookup result = null;
 
-        var candidateIter = libNameCandidates.iterator();
+        final var candidateIter = libNameCandidates.iterator();
         while (candidateIter.hasNext()) {
-            var candidate = candidateIter.next();
+            final var candidate = candidateIter.next();
             try {
-                result = libraryLookup(candidate, scope);
-            } catch (IllegalArgumentException e) {
-                var msg = "Could not get a handle on lib.";
+                result = libraryLookup(candidate, arena);
+            } catch (final IllegalArgumentException e) {
+                final var msg = "Could not get a handle on lib.";
                 if (!candidateIter.hasNext()) {
                     LOG.error(msg + " Giving up.", e);
                     throw e;
